[tool.poetry]
name = "simulator"
version = "0.1.0"
description = ""
authors = ["leipeng <leipeng@haocang.com>"]

[tool.poetry.dependencies]
python = "^3.7"
fastapi = "^0.61.1"
uvicorn = "^0.12.0"
click = "^7.1.2"
celery = {version = "4.4.7", extras = ["redis"]}
websockets = "^8.1"
httpx = "^0.15.4"
scipy = "^1.5.2"
pymysql = "^0.10.1"

[tool.poetry.dev-dependencies]
pytest = "^5.2"

[[tool.poetry.source]]
name = "ali"
url = "https://mirrors.aliyun.com/pypi/simple"
default = true

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
